force-app/main/default/objects/User/fields/FSM_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>FSM_BusinessUnit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waste Infra</fullName>
            </value>
            <value>
                <fullName>Water Infra</fullName>
            </value>
            <value>
                <fullName>Water Non Infra</fullName>
            </value>
            <value>
                <fullName>Waste Non Infra</fullName>
            </value>
            <value>
                <fullName>Bio Resource</fullName>
            </value>
            <value>
                <fullName>Developer Services</fullName>
            </value>
            <value>
                <fullName>Metering</fullName>
            </value>
            <value>
                <fullName>Green Recovery</fullName>
            </value>
            <value>
                <fullName>WasteNon Infra</fullName>
                <isActive>false</isActive>
                <label>WasteNon Infra</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>