force-app/main/default/objects/User/fields/FSM_ContractorOrganisation__c.field-meta.xml
<CustomField>
    <fullName>FSM_ContractorOrganisation__c</fullName>
    <description>SFS-6635</description>
    <label>Contractor Organisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Network Plus (Water)</fullName>
            </value>
            <value>
                <fullName>Network Plus (Developer Services)</fullName>
            </value>
            <value>
                <fullName>Network Plus (Metering)</fullName>
            </value>
            <value>
                <fullName>Sapphire Utility Services</fullName>
            </value>
            <value>
                <fullName>Customer Solutions Plus</fullName>
            </value>
            <value>
                <fullName>Brays</fullName>
            </value>
            <value>
                <fullName>PN Daly</fullName>
            </value>
            <value>
                <fullName>Watertight</fullName>
            </value>
            <value>
                <fullName>Kings</fullName>
            </value>
            <value>
                <fullName>HD Contractor</fullName>
            </value>
            <value>
                <fullName>Other STW Contractor</fullName>
            </value>
            <value>
                <fullName>Quantum</fullName>
                <isActive>false</isActive>
                <label>Quantum</label>
            </value>
            <value>
                <fullName>Wilson Bros</fullName>
                <isActive>false</isActive>
                <label>Wilson Bros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>