force-app/main/default/objects/User/fields/FSM_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExternalId__c</fullName>
    <description>SFI-694</description>
    <externalId>true</externalId>
    <label>SAP User ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>