force-app/main/default/objects/User/fields/FSM_ProfileName__c.field-meta.xml
<CustomField>
    <fullName>FSM_ProfileName__c</fullName>
    <description>Added this field to  fix issues of Profile.Name field access, this is a back end field. SFS-1428</description>
    <formula>$Profile.Name</formula>
    <label>Profile Name</label>
    <type>Text</type>
</CustomField>