force-app/main/default/objects/User/validationRules/FSM_UserEditRestriction.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_UserEditRestriction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Permission.FSM_Modify_User_Record), NOT( $Profile.Name = &apos;FSM System Administrator&apos;),NOT( $Profile.Name = &apos;System Administrator&apos;))</errorConditionFormula>
    <errorMessage>You do not have the required permission to edit this record.</errorMessage>
</ValidationRule>